<resources>
    <string name="app_name">Taki Tile Onboard App</string>

    <string name="email_type">email</string>
    <string name="password_type">password</string>
    <string name="password_confirmation_type">password_confirmation</string>
    <string name="text_type">text</string>

    <string name="login">Entrar</string>
    <string name="login_failure">Erro ao efetuar login.</string>
    <string name="login_success">Login efetuado com sucesso!</string>

    <string name="login_success_title">Login</string>
    <string name="login_name">nome de login:</string>
    <string name="login_token">token de login:</string>

    <string name="invalid_name">Nome de usuário inválido.</string>
    <string name="invalid_email">E-mail inválido.</string>
    <string name="invalid_password">Senha inválida.</string>

    <string name="button_list_users">Listar usuários</string>

    <string name="user_list_title">Lista de usuários</string>

    <string name="user_details_title">Detalhes de usuário</string>
    <string name="user_details_name">Nome: </string>
    <string name="user_datails_email">E-mail: </string>
    <string name="user_details_role">Cargo: </string>
    <string name="user_details_edit">Editar dados</string>
    <string name="user_details_delete">Deletar usuário</string>

    <string name="username_input_field">Nome de usuário</string>
    <string name="email_input_field">E-mail</string>
    <string name="password_input_field">Senha</string>

    <!--User Create-->
    <string name="create_user_title">Criar novo usuário</string>
    <string name="create_user_submit">Cadastrar</string>
    <string name="create_user_failure">Erro ao criar usuário.</string>
    <string name="create_user_success">Usuário cadastrado com sucesso!</string>
    <string name="create_user_password_confirm">Confirmação da senha</string>
    <string name="invalid_password_confirm">Senhas não conferem.</string>

    <string name="edit_user_title">Editar usuário</string>
    <string name="edit_user_submit">Finalizar</string>

    <!--User Delete-->
    <string name="delete_user_success">Usuário deletado com sucesso.</string>
    <string name="delete_user_failure">Erro ao deletar usuário.</string>
    <string name="delete_user_alert_message">Deseja realmente deletar o usuário %1$s?</string>
    <string name="delete_user_alert_positive_button">Sim</string>
    <string name="delete_user_alert_negative_button">Não</string>

    <string name="default_empty"></string>
    <string name="default_invalid_field">Campo inválido.</string>
    <string name="default_submit">Submeter</string>

    <!--Snack bar-->
    <string name="error_default_message">Ocorreu um erro.</string>
    <string name="error_connection_message">Ocorreu um erro de comunicação.</string>
</resources>
