<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.EditUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.test.taqtile.takitiletest.InputWithValidation
            android:id="@+id/editTextEditUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/username_input_field"
            app:error_message="@string/invalid_name"
            app:input_type="@string/text_type" />

        <com.test.taqtile.takitiletest.InputWithValidation
            android:id="@+id/editTextEditUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/email_input_field"
            app:error_message="@string/invalid_email"
            app:input_type="@string/email_type" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/spinnerEditUserRole" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/edit_user_submit"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorWhite"
                android:id="@+id/buttonEditUserSubmit" />

            <ProgressBar
                android:id="@+id/progressBarEditUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:progressTint="@android:color/background_light"
                android:translationZ="2dp" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>